# ipfetch

./: Cargo.toml  LICENSE.txt  README.md
country_flags/: Afghanistan  Albania  Algeria  Angola  Argentina  Armenia  Australia  Austria  Azerbaijan  Bahrain  Bangladesh  Belarus  Belgium  Benin  Bhutan  Bolivia  Bosnia_and_Herzegovina  Botswana  Brazil  Bulgaria  Burkina_Faso  Burundi  Cambodia  Cameroon  Canada  Cape_Verde  Central_African_Republic  Chad  Chile  China  Colombia  Comoros  Congo  Congo_Republic  Costa_Rica  Croatia  Cuba  Cyprus  Czechia  Denmark  (+138 more)
src/: main.rs
